Update branding from SecureGo to SecureGO across all dashboard and popup files

--- a/backend_gev/templates/dashboard.html
+++ b/backend_gev/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard - SecureGo{% endblock %}
+{% block title %}Dashboard - SecureGO{% endblock %}
 
 {% block extra_css %}
 <style>
